--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native/assets": "^1.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.5",
+    "expo-asset": "~8.9.1",
+    "expo-av": "~13.2.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "expo-av": "~13.2.1",
-    "expo-splash-screen": "~0.18.1"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
