--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "chronograph",
   "version": "1.0.0",
+  "homepage": "https://Mount-Blanc.github.io/ReactNow/",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "predeploy": "npx expo export:web",
+  "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
@@ -26,7 +29,8 @@
     "react-native-web": "^0.18.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^5.0.0"
   },
   "private": true
 }
